--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <header class="hero">
     <div class="wrap hero-inner">
       <div class="brand">
-        <div class="mark" aria-hidden="true"></div>
+        <img class="logo" src="assets/logo.png" alt="Academia logo" />
         <div>
           <h1 id="title">Dictionary</h1>
           <p class="subtitle" id="subtitle">Loading…</p>
+          <p class="subtitle muted" id="heritageTop"></p>
         </div>
       </div>
 
@@ -44,9 +45,14 @@
     </section>
   </main>
 
-  <footer class="wrap footer">
-    <span id="footerMeta"></span>
-  </footer>
+<footer class="wrap footer">
+  <div class="footer-left">
+    <div><strong>Academia Caliterana de lo Internacional</strong></div>
+    <div class="muted" id="footerMeta"></div>
+    <div class="muted" id="heritageLine"></div>
+  </div>
+</footer>
+
 
   <script src="app.js"></script>
 </body>
