Added filters based on part of speech

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
         <button id="clear" class="btn secondary" type="button">Clear</button>
       </div>
 
+      <div class="filters">
+        <div class="filter">
+          <span class="filter-label">Part of speech</span>
+          <select id="posFilter"></select>
+        </div>
+
+        <div class="filter">
+          <span class="filter-label">Tags</span>
+          <span class="muted">Click chips below to toggle</span>
+        </div>
+      </div>
+
       <div class="chips" id="chips"></div>
     </div>
   </header>
