--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         </div>
       </div>
 
+<nav class="topnav">
+  <a class="navlink active" href="./index.html">Dictionary</a>
+  <a class="navlink" href="./phonology.html">Letters & Pronunciation</a>
+</nav>
+
       <div class="searchbar">
         <input id="q" placeholder="Search: headword, meaning, tag…" autocomplete="off" />
         <button id="clear" class="btn secondary" type="button">Clear</button>
