--- a/phonology.html
+++ b/phonology.html
@@ -20,10 +20,11 @@
         </div>
       </div>
 
-      <nav class="topnav">
-        <a class="navlink" href="./index.html">Dictionary</a>
-        <a class="navlink active" href="./phonology.html">Letters & Pronunciation</a>
-      </nav>
+<nav class="topnav">
+  <a class="navlink" href="./index.html">Academy</a>
+  <a class="navlink" href="./dictionary.html">Dictionary</a>
+  <a class="navlink active" href="./phonology.html">Letters & Pronunciation</a>
+</nav>
 
       <div class="searchbar">
         <input id="q" placeholder="Search: grapheme, IPA, context…" autocomplete="off" />
