--- a/dictionary.html
+++ b/dictionary.html
@@ -19,7 +19,8 @@
       </div>
 
 <nav class="topnav">
-  <a class="navlink active" href="./index.html">Dictionary</a>
+  <a class="navlink" href="./index.html">Academy</a>
+  <a class="navlink active" href="./dictionary.html">Dictionary</a>
   <a class="navlink" href="./phonology.html">Letters & Pronunciation</a>
 </nav>
 
