Correct language usage in index.html content

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <div class="element">
         <h3>Systematization / Sistematizacion</h3>
         <p class="english">
-            We use Campos Lima's system as our basis and expand the vocabulary upon it, loyal to his original criteria.
+            We use the system created by Campos Lima as our basis and expand the vocabulary upon it, loyal to his original criteria.
         </p>
         <p class="lo-internacional">
-            Nos usamos lo sistema formato per Campos Lima como nostra base e expandimos lo vocabulário súper ela, leales a lo suo critério original.
+            Nos usamos lo sistema formato per Campos Lima como la nostra base e expandimos lo vocabulário súper ela, leales a lo suo critério original.
         </p>
     </div>
 
@@ -76,17 +76,17 @@
             We adapt the language to the requirements of contemporary science and technology, strictly maintaining its etymological roots and Latin character.
         </p>
         <p class="lo-internacional">
-            Nos adaptamos la língua a las exigéncias de la sciéncia e tecnologia contemporáneas, mantenendo strictamente las suas radices etimológicas e lo carácter latino.
+            Nos adaptamos la língua a las exigéncias de la sciéncia e la tecnologia contemporáneas, mantenendo strictamente las suas radices etimológicas e lo carácter latino.
         </p>
     </div>
 
     <div class="element">
         <h3>Promotion / Promocion</h3>
         <p class="english">
-            We propagate the language through education and literary production to demonstrate its fluency and absolute viability as a national and global medium.
+            We promote the language through education and literary production to demonstrate its fluency and absolute viability as a national and global medium.
         </p>
         <p class="lo-internacional">
-            Nos propagamos la língua através de la educacion e produccion literária pro demonstrar sua fluéncia e absoluta viabilitate como médio nacional e global.
+            Nos promovemos la língua através de la educacion e produccion literária pro demonstrar sua fluéncia e absoluta viabilitate como médio nacional e global.
         </p>
     </div>
 </div>
